testing y codigo de a historia 2, 3 y 4, obtención de archivos .md, links y validacion con peticion http, elaboración de la promesa. confiugracion de cli

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,26 @@
 {
   "env": {
-    "node": true
+    "browser": true,
+    "es2021": true,
+    "jest": true
   },
+  "extends": [
+    "airbnb-base"
+  ],
   "parserOptions": {
-    "ecmaVersion": 8
+    "ecmaVersion":"latest",
+    "sourceType": "module"
+  },
+  "plugins": ["jest"],
+  "rules": {
+    "linebreak-style": 0,
+    "prefer-destructuring": 0,
+    "import/extensions": 0,
+    "import/prefer-default-export": 0,
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error"
   }
 }
