--- a/package.json
+++ b/package.json
@@ -8,17 +8,31 @@
     "node": ">=14.x"
   },
   "type": "module",
+  "bin" : {
+    "mdLinks": "cli.js"
+  },
   "dependencies": {
-    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-env": "^7.17.12",
+    "chalk": "^5.0.1",
+    "eslint-plugin-jest": "^26.2.2",
     "file-system": "^2.2.2",
+    "node-fetch": "^3.2.4",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^28.1.0",
+    "cli-spinners": "^2.6.1",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.0"
   },
   "scripts": {
-    "test": "jest"
+    "eslint": "eslint --ext .js test/",
+    "test": "jest --coverage"
   },
   "jest": {
     "transform": {
