--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "md-Links-Karina-Macedo",
+  "name": "md-Links-karina-macedo",
   "version": "0.1.0",
   "description": "Terminal string get links in markdown files to get info",
   "author": "Karina Macedo",
   "main": "index.js",
+  "keywords": [
+    "node",
+    "jest",
+    "library",
+    "md",
+    "markdown",
+    "links",
+    "link broken",
+    "md-links"
+  ],
   "engines": {
     "node": ">=14.x"
   },
