cambio del nombre del packase.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-Links-karina-macedo",
+  "name": "md-links-karina-macedo",
   "version": "0.1.0",
   "description": "Terminal string get links in markdown files to get info",
   "author": "Karina Macedo",
