--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "type": "git",
     "url": "https://github.com/KarinaMacedo13/LIM017-md-links"
   },
+  "bugs": {
+    "url": "https://github.com/KarinaMacedo13/LIM017-md-links/issues"
+  },
   "dependencies": {
     "@babel/preset-env": "^7.17.12",
     "chalk": "^5.0.1",
